[package]
name = "gamehs"
version = "0.1.0"
authors = ["gamer"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(linux)'.dependencies]

#sdl2]
#version = "0.32.2"
#features = ["bundled"]

[target.'cfg(windows)'.dependencies.sdl2]
version = "0.32.2"