[package]
name = "tiles"
version = "0.1.0"
authors = ["Brett Jurman <i.be.brett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

[dependencies.serde]
version = "1.0.99"
features = ["derive"]

[dependencies.sdl2]
version = "0.32.2"
features = ["image"]
