[package]
name = "tiles"
version = "0.1.0"
authors = ["Brett Jurman <i.be.brett@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.17.0"
itertools = "0.7.8"
rand = "0.7.0"
serde_json = "1.0"

[dependencies.serde]
version = "1.0.99"
features = ["derive"]

[dependencies.sdl2]
version = "0.32.2"
features = ["image", "mixer"]
